# hedgefund-dashboard

./: CONTRIBUTING.md  GEMINI_PROMPT.md  LICENSE  README.md  package-lock.json  pyproject.toml  requirements.txt  research_note.md  verify_a11y.py  verify_logic.py  verify_tooltips.py
.Jules/: palette.md
.github/workflows/: ci.yml
data/tables/: appendix_rebalance_sensitivity.csv  appendix_signal_baseline.csv  conditional_performance_by_regime.csv  main_unconditional.csv  regime_frequency.csv  regime_sensitivity_bootstrap.csv  regime_transition_matrix.csv  regime_transition_performance.csv  robustness_assets_unconditional.csv  sma_sweep_sharpe_by_regime.csv  unconditional_performance.csv  walk_forward_oos_summary.csv
data/time_series/: iwm_backtest_daily.csv  qqq_backtest_daily.csv  spy_backtest_daily.csv
docs/: DEMO.md
manuscript/: main.tex
metadata/: data_dictionary.md  figure_index.csv  manifest.json  summary_metrics.json
output/: full_report.html  full_report.md
output/arxiv_submission/: ARXIV_METADATA.md  README_ARXIV.md  main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
output/signature_paper/: paper.md
output/signature_paper/snapshot/: snapshot_info.json
output/signature_paper/snapshot/raw/: IWM.csv  QQQ.csv  SPY.csv
output/signature_paper/tables/: appendix_cost_sensitivity.csv  appendix_inference_high_minus_normal.csv  appendix_inference_strategy_vs_benchmark_by_regime.csv  main_conditional_by_regime.csv  main_regime_frequency.csv  main_robustness_assets.csv  main_transition_matrix.csv  main_transition_stats.csv  main_unconditional.csv
scripts/: build_paper_assets.py  build_publication_package.py  generate_signature_paper.py
src/: dashboard.py  import_prices.py
src/modules/: __init__.py  alerts.py  backtester.py  config.py  data_model.py  factors.py  liquidity.py  portfolio.py  regime_analysis.py  reporting.py  risk.py  scenario.py  signals.py  signals_advanced.py  sweep.py
tests/: test_alerts.py  test_backtester.py  test_data_model.py  test_factors.py  test_portfolio.py  test_regime_analysis.py  test_risk.py  test_scenario.py  test_signals.py  test_signals_advanced.py  test_sweep.py
verification/: verify_tooltips.py
